# web_asyncio

./: .gitignore  pyproject.toml
additional_task/: exchange.txt  index.html  privat_additional.py  privat_additional_with_argparse.py  server.py
base_task/: privat.py  privat_async.py
