[tool.poetry]
name = "asyncio"
version = "0.1.0"
description = ""
authors = ["AntonHran <anton.hranovskyi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiofile = "^3.8.7"
aiopath = "^0.6.11"
lock = "^2018.3.25.2110"
aioshutil = "^1.3"
aiohttp = "^3.8.4"
websockets = "^11.0.3"
names = "^0.3.0"
faker = "^19.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
